[gd_scene load_steps=7 format=3 uid="uid://c5hc5yrwly7mb"]

[ext_resource type="Script" path="res://MainWindow.gd" id="1_4nrkd"]
[ext_resource type="Script" path="res://UI components/WorldCanvas.gd" id="2_jib0v"]
[ext_resource type="Script" path="res://UI components/CanvasDrawer.gd" id="2_yqlq1"]
[ext_resource type="Script" path="res://UI components/WorldTab.gd" id="4_pe36g"]
[ext_resource type="Script" path="res://UI components/ColorPallet.gd" id="5_8l57t"]
[ext_resource type="Script" path="res://UI components/LevelEditor.gd" id="5_vy4hv"]

[node name="Node" type="Node"]
script = ExtResource("1_4nrkd")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(105, 120)
size = Vector2i(754, 555)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.lvl")
use_native_dialog = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
position = Vector2i(105, 120)
size = Vector2i(754, 555)
ok_button_text = "Save"
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.lvl")
use_native_dialog = true

[node name="CanvasDrawer" type="Node2D" parent="."]
position = Vector2(460, 202)
script = ExtResource("2_yqlq1")
width = 300
height = 300

[node name="WorldCanvas" type="Node" parent="."]
script = ExtResource("2_jib0v")

[node name="WorldEditorTab" type="Node" parent="."]
script = ExtResource("4_pe36g")

[node name="ColorPallet" type="Node" parent="WorldEditorTab"]
script = ExtResource("5_8l57t")

[node name="LevelEditor" type="Node" parent="."]
script = ExtResource("5_vy4hv")

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="touched" from="CanvasDrawer" to="WorldCanvas" method="_on_canvas_drawer_touched"]
[connection signal="drawWorld" from="WorldCanvas" to="CanvasDrawer" method="_on_world_canvas_draw_world"]
